; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_exit.c_exit_files.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_exit.c_exit_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { %struct.files_struct* }
%struct.files_struct = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exit_files(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  %3 = alloca %struct.files_struct*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %4 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %5 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %4, i32 0, i32 0
  %6 = load %struct.files_struct*, %struct.files_struct** %5, align 8
  store %struct.files_struct* %6, %struct.files_struct** %3, align 8
  %7 = load %struct.files_struct*, %struct.files_struct** %3, align 8
  %8 = icmp ne %struct.files_struct* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %11 = call i32 @task_lock(%struct.task_struct* %10)
  %12 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %13 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %12, i32 0, i32 0
  store %struct.files_struct* null, %struct.files_struct** %13, align 8
  %14 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %15 = call i32 @task_unlock(%struct.task_struct* %14)
  %16 = load %struct.files_struct*, %struct.files_struct** %3, align 8
  %17 = call i32 @put_files_struct(%struct.files_struct* %16)
  br label %18

18:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @task_lock(%struct.task_struct*) #1

declare dso_local i32 @task_unlock(%struct.task_struct*) #1

declare dso_local i32 @put_files_struct(%struct.files_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
